--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -20,6 +20,7 @@
   },
   "plugins": ["react", "@typescript-eslint", "react-hooks", "prettier"],
   "rules": {
+    "react/jsx-one-expression-per-line": "off",
     "camelcase": "off",
     "prettier/prettier": "error",
     "react-hooks/rules-of-hooks": "error",
